--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 #calculator{
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 20%);
@@ -33,4 +41,12 @@ button{
     font-size: 2.5rem;
     font-weight: bold;
     cursor: pointer;
+}
+
+button:hover{
+    background-color: hsl(0, 0%, 30%);
+}
+
+button:active{
+    background-color: hsl(0, 0%, 60%);
 }
